Added the Youtube link

--- a/index.html
+++ b/index.html
@@ -1,23 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="styles.css" />
-        <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Black+Ops+One&family=Creepster&family=La+Belle+Aurore&family=MedievalSharp&family=Orbitron&family=Rye&display=swap" rel="stylesheet">
-        <script src="index.js"></script>
-    </head>
-    <body>
-       <img src="https://media.licdn.com/dms/image/C5603AQGFLDENR2aJ5A/profile-displayphoto-shrink_800_800/0/1656909157104?e=2147483647&v=beta&t=gp3bKsXJvSwQFjANUAJxi1ryfvEBnYORC7htlhYwJaM" alt="Picture of Malik Girondin">
-       <h1>Hi, my name is Malik Girondin 👋🏿</h1>
-       <h2>Fun facts about me:</h2>
-        <ul>
-            <li>College Grad- WGU</li>
-            <li>Part-time Instructor</li>
-            <li>Early 20s in Age</li>
-            <li>Anime Watcher</li>
-            <li>Casual Gamer</li>
-        </ul>
-        <p>Please connect with me on <a href="https://www.linkedin.com/in/malikgirondin" target="_blank">LinkedIn here.</a></p>
-        <input type="text" placeholder="Enter email...">
-        <button>Join newsletter</button>
-    </body>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bangers&family=Black+Ops+One&family=Creepster&family=La+Belle+Aurore&family=MedievalSharp&family=Orbitron&family=Rye&display=swap"
+      rel="stylesheet"
+    />
+    <script src="index.js"></script>
+  </head>
+  <body>
+    <img
+      src="https://media.licdn.com/dms/image/C5603AQGFLDENR2aJ5A/profile-displayphoto-shrink_800_800/0/1656909157104?e=2147483647&v=beta&t=gp3bKsXJvSwQFjANUAJxi1ryfvEBnYORC7htlhYwJaM"
+      alt="Picture of Malik Girondin"
+    />
+    <h1>Hi, my name is Malik Girondin 👋🏿</h1>
+    <h2>Fun facts about me:</h2>
+    <ul>
+      <li>College Grad- WGU</li>
+      <li>Part-time Instructor</li>
+      <li>Early 20s in Age</li>
+      <li>Anime Watcher</li>
+      <li>Casual Gamer</li>
+    </ul>
+    <p>
+      Please connect with me on
+      <a href="https://www.linkedin.com/in/malikgirondin" target="_blank"
+        >LinkedIn here.</a
+      >
+    </p>
+    <p>
+      Please connect with me on
+      <a href="https://www.youtube.com/@malikgirondin/videos" target="_blank"
+        >Youtube here.</a
+      >
+    </p>
+    <input type="text" placeholder="Enter email..." />
+    <button>Join newsletter</button>
+  </body>
 </html>
